Download file with resume Arvados-DCO-1.1-Signed-off-by: Jakub Szlenk jakubszlenk@gmail.com